--- a/react/src/index.css
+++ b/react/src/index.css
@@ -36,16 +36,18 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 24px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  /* background-color: #1a1a1a; */
   cursor: pointer;
   transition: border-color 0.25s;
+  z-index: 1001;    
 }
+
 button:hover {
   border-color: #646cff;
 }
@@ -66,3 +68,55 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.header {
+  position: fixed; 
+  top: 1%;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  z-index: 1000;    
+  background-color: red;
+  padding: 1px 0;
+}
+
+
+.search_bar {
+  width: 500px;
+  height: 40px;
+  padding: 10px 20px;
+  border: 1px solid #dfe1e5;
+  border-radius: 24px;
+  box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
+  font-size: 16px;
+  outline: none;
+  transition: box-shadow 0.3s ease-in-out;
+  /* margin: auto auto; */
+  display: flex;
+}
+
+.search_bar_container {
+  position: fixed; 
+  top: 15%;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
+  z-index: 1000;    
+}
+
+.search_bar_icon {
+  width: 2px;
+  height: 2px;
+  margin-right: 10px;
+  z-index: 1001;
+}
+
+/* Resize images */
+.search_bar_icon img {
+  width: 100%;
+  height: 100%;
+}
+
