--- a/pokedex/src/app/page.module.css
+++ b/pokedex/src/app/page.module.css
@@ -1,14 +1,14 @@
 
-  .header {
-    position: fixed; 
-    top: 5%;
-    left: 0;
+.header {
+    display: flex;
+    flex-wrap: wrap; /* allow items to wrap to the next line */
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
     width: 100%;
-    display: flex;
-    padding: 10px 0;
-    z-index: 1000;  
-    display: flex;
+    box-sizing: border-box;
   }
+  
   
   .header h2 {
     font-size: 2.5em;
@@ -18,27 +18,25 @@
     padding: 0;
     
   }
-  
+
   .header img {
-    width: 6%;
+    width: 40px;
     margin: 0 20px;
+    transform: translateY(5px); 
   }
   
   .search_bar {
-    width: 500px;
-    height: 40px;
-    margin-left: 25%;
-    padding: 10px 20px;
+    width: 100%;
+    margin-left: 20px; /* push it away from h2 */
+    max-width: 500px;
+    padding: 0.6em 1.2em;
     border: 1px solid #dfe1e5;
     border-radius: 24px;
     box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
     font-size: 16px;
     outline: none;
-    transition: box-shadow 0.3s ease-in-out;
-    /* margin: auto auto; */
-    display: flex;
+    flex: 1;
   }
-  
   
   .search_bar_icon {
     width: 2px;
@@ -65,3 +63,18 @@
     transition: border-color 0.25s;
     z-index: 1001;    
   }
+
+
+  /* @media (max-width: 768px) {
+    .header {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .search_bar,
+    .search_button {
+      width: 100%;
+      margin-left: 20px;
+    }
+  }
+   */
