--- a/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
+++ b/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
@@ -12,6 +12,7 @@
     position: sticky;
     top: 0;
     z-index: 100;
+    border-radius: 12px;
   }
   
   .header h2 {
@@ -25,6 +26,7 @@
   .logo {
     width: 30px;
     height: 30px;
+    margin-top: 5px;
   }
   
   .searchContainer {
@@ -48,4 +50,84 @@
     border-radius: 18px;
     cursor: pointer;
     font-weight: bold;
+  }
+
+
+.pokemonInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-top: 20px;
+    padding: 2rem 1rem;
+    border-radius: 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.pokemonSprite {
+    width: 20%;
+    height: 20%;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+}
+
+.pokemonInfo > p {
+    margin: 0;
+    font-size: 2rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+}
+
+.pokemonInfoMore {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 1rem;
+    padding: 2rem;
+    margin-top: 20px;
+    padding: 2rem 1rem;
+    border-radius: 1rem;
+}
+
+.pokemonInfoMore > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 1rem;
+    border-radius: 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.pokemonDescription {
+    align-items: left;
+    justify-content: left;
+    text-align: left;
+    padding: 1rem;
+    border-radius: 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
+}
+
+@media (prefers-color-scheme: dark) {
+    .pokemonInfo {
+      color: rgba(255, 246, 246, 0.87);
+      background-color: #1b1b1b;
+    }.pokemonInfoMore > div {
+        color: rgba(255, 246, 246, 0.87);
+        background-color: #1b1b1b;
+    }.pokemonDescription {
+        color: rgba(255, 246, 246, 0.87);
+        background-color: #1b1b1b;
+    }
+  }
+  
+  @media (prefers-color-scheme: light) {
+    .pokemonInfo {
+      color: #2a2222;
+      background-color: #e2e2e2;
+    }
+
   }
