--- a/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
+++ b/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
@@ -90,6 +90,33 @@
     border-radius: 1rem;
 }
 
+.pokemonInfoMoreLarge {
+    gap: 1rem;
+    padding: 1%;
+    padding: 1rem 4rem;
+    border-radius: 1rem;
+}
+
+.pokemonMoves {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding: 2rem;
+    margin-top: 20px;
+    padding: 2rem 1rem;
+    border-radius: 1rem;
+}
+
+.pokemonMoves > div {
+  flex:1;
+  min-width: 300px;
+  gap: 1rem;
+  padding: 2rem;
+  margin-top: 20px;
+  padding: 2rem 1rem;
+  border-radius: 1rem;
+}
+
 .pokemonInfoMore > div {
     display: flex;
     flex-direction: column;
@@ -111,6 +138,13 @@
     width: 100%;
 }
 
+
+.pokemonMovesListItems {
+    list-style-type: None;
+    margin: 0;
+    padding: 0;
+}
+
 @media (prefers-color-scheme: dark) {
     .pokemonInfo {
       color: rgba(255, 246, 246, 0.87);
@@ -121,9 +155,14 @@
     }.pokemonDescription {
         color: rgba(255, 246, 246, 0.87);
         background-color: #1b1b1b;
-    }
+    } .pokemonMoves > div {
+    color: rgba(255, 246, 246, 0.87);
+    background-color: #1b1b1b;
+  } .pokemonInfoMoreLarge {
+    color: rgba(255, 246, 246, 0.87);
+    background-color: #1b1b1b;
   }
-  
+}
   @media (prefers-color-scheme: light) {
     .pokemonInfo {
       color: #2a2222;
