--- a/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
+++ b/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
@@ -93,8 +93,9 @@
 .pokemonInfoMoreLarge {
     gap: 1rem;
     padding: 1%;
-    padding: 1rem 4rem;
+    padding: 1rem 2rem;
     border-radius: 1rem;
+    margin: 1rem 1rem;
 }
 
 .pokemonMoves {
