--- a/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
+++ b/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
@@ -81,8 +81,7 @@
 }
 
 .pokemonInfoMore {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    display: flex;
     gap: 1rem;
     padding: 2rem;
     margin-top: 20px;
@@ -112,13 +111,12 @@
   flex:1;
   min-width: 300px;
   gap: 1rem;
-  padding: 2rem;
-  margin-top: 20px;
-  padding: 2rem 1rem;
+  padding: 1rem 2rem;
   border-radius: 1rem;
 }
 
 .pokemonInfoMore > div {
+    flex:1;
     display: flex;
     flex-direction: column;
     align-items: center;
