--- a/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
+++ b/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
@@ -4,7 +4,7 @@
     min-height: 100vh;
   }
   
-  .header {
+.header {
     background: #ee1515;
     padding: 1rem 2rem;
     display: flex;
@@ -15,47 +15,47 @@
     top: 0;
     z-index: 100;
     border-radius: 12px;
-  }
-  
-  .header h2 {
+}
+
+.header h2 {
     margin: 0;
     display: flex;
     align-items: center;
     gap: 0.5rem;
     font-size: 1.8rem;
     text-decoration: none;
-  }
+}
 
 
-  
-  .logo {
+
+.logo {
     width: 30px;
     height: 30px;
     margin-top: 5px;
-  }
-  
-  .searchContainer {
+}
+
+.searchContainer {
     display: flex;
     flex: 1;
     min-width: 250px;
     gap: 0.5rem;
-  }
-  
-  .searchBar {
+}
+
+.searchBar {
     flex: 1;
     padding: 0.5rem 1rem;
     border-radius: 18px;
     border: none;
     outline: none;
-  }
-  
-  .searchButton {
+}
+
+.searchButton {
     border: none;
     padding: 0.5rem 1.5rem;
     border-radius: 18px;
     cursor: pointer;
     font-weight: bold;
-  }
+}
 
 
 .pokemonInfo {
@@ -97,7 +97,7 @@
     gap: 1rem;
     padding: 2rem;
     margin-top: 20px;
-    padding: 2rem 1rem;
+    padding: 0 1rem;
     border-radius: 1rem;
 }
 
@@ -180,6 +180,28 @@
     width: 100%;
 }
 
+.statsContainer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding: 2rem;
+    padding: 0 1rem;
+    border-radius: 1rem;
+}
+
+.stats {
+    flex:1;
+    height: 150px;
+    min-width: 150px;
+    text-align: center;
+    gap: 1rem;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+    vertical-align: middle;
+    line-height: 150px;
+    max-height: 30vh;
+}
+
 
 .pokemonMovesListItems {
     list-style-type: None;
@@ -201,6 +223,9 @@
     color: rgba(255, 246, 246, 0.87);
     background-color: #1b1b1b;
   } .pokemonInfoMoreLarge {
+    color: rgba(255, 246, 246, 0.87);
+    background-color: #1b1b1b;
+  } .stats {
     color: rgba(255, 246, 246, 0.87);
     background-color: #1b1b1b;
   }
