miss me with that bs

--- a/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
+++ b/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
@@ -66,6 +66,7 @@
     text-align: center;
     margin-top: 20px;
     padding: 2rem 1rem;
+    margin: 1rem;
     border-radius: 1rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -96,7 +97,6 @@
     flex-wrap: wrap;
     gap: 1rem;
     padding: 2rem;
-    margin-top: 20px;
     padding: 0 1rem;
     border-radius: 1rem;
 }
@@ -120,11 +120,8 @@
     flex-wrap: wrap;
     gap: 1rem;
     padding: 2rem;
-    margin-top: 20px;
-    padding: 2rem 1rem;
+    padding: 0 1rem;
     border-radius: 1rem;
-    overflow: hidden;
-    max-height: 30vh;
 
 }
 
@@ -207,6 +204,12 @@
     list-style-type: None;
     margin: 0;
     padding: 0;
+}
+
+.boxTitles {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-left: 20px;
 }
 
 @media (prefers-color-scheme: dark) {
