--- a/pokedex/src/app/page.module.css
+++ b/pokedex/src/app/page.module.css
@@ -12,15 +12,18 @@
     position: sticky;
     top: 0;
     z-index: 100;
-  }
-  
-  .header h2 {
+    border-radius: 12px;
+}
+
+.header h2 {
     margin: 0;
     display: flex;
     align-items: center;
     gap: 0.5rem;
     font-size: 1.8rem;
-  }
+    text-decoration: none;
+}
+
   
   .logo {
     width: 30px;
