project in 3 days fn

--- a/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
+++ b/pokedex/src/app/pokemon/[pokemon]/pokemon_page.module.css
@@ -1,11 +1,13 @@
 
 
 .main {
-    min-height: 100vh;
+    min-height: 100%;
+
   }
   
 .header {
     background: #ee1515;
+    width: 100%;
     padding: 1rem 2rem;
     display: flex;
     flex-wrap: wrap;
